--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <button class="navbar-burger flex items-center text-white p-3 md:hidden z-50">
         <svg class="block h-6 w-6 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <title>Mobile menu</title>
+            <title>Mobile Menu</title>
             <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
         </svg>
     </button>
