--- a/index.html
+++ b/index.html
@@ -4,55 +4,96 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shehan & Susan's Wedding Site | Home</title>
+      <!-- Inline critical CSS for Google Fonts -->
+  <style>
+    @font-face {
+      font-family: 'Abhaya Libre';
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: local('Abhaya Libre'), url(https://fonts.gstatic.com/s/abhayalibre/v10/e3tmeuGtX-Co5MNzeAOqinEYEsU.woff2) format('woff2');
+    }
+    @font-face {
+      font-family: 'Abhaya Libre';
+      font-style: normal;
+      font-weight: 700;
+      font-display: swap;
+      src: local('Abhaya Libre Bold'), url(https://fonts.gstatic.com/s/abhayalibre/v10/e3tmeuGtX-Co5MNzeAOqinEYEsU.woff2) format('woff2');
+    }
+    @font-face {
+      font-family: 'Homemade Apple';
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: local('Homemade Apple'), url(https://fonts.gstatic.com/s/homemadeapple/v14/Qw3aZQpJ562ft5aCIERgi23mI3A.woff2) format('woff2');
+    }
+    @font-face {
+      font-family: 'Source Sans Pro';
+      font-style: normal;
+      font-weight: 400;
+      font-display: swap;
+      src: local('Source Sans Pro'), url(https://fonts.gstatic.com/s/sourcesanspro/v24/6xK3dSBYKcSV-LCoeQqfX1RYOo3qOK7jPrykkHc.woff2) format('woff2');
+    }
+    @font-face {
+      font-family: 'Source Sans Pro';
+      font-style: normal;
+      font-weight: 600;
+      font-display: swap;
+      src: local('Source Sans Pro SemiBold'), url(https://fonts.gstatic.com/s/sourcesanspro/v24/6xK3dSBYKcSV-LCoeQqfX1RYOo3qOK7jPrykkHc.woff2) format('woff2');
+    }
+  </style>
+     <!-- Preload Google Fonts -->
+     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;700&family=Homemade+Apple&family=Source+Sans+Pro:wght@400;600&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+     <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;700&family=Homemade+Apple&family=Source+Sans+Pro:wght@400;600&display=swap"></noscript> 
     <link href="/assets/css/main.css" rel="stylesheet">
     <link href="/assets/css/bootstrap-icons.min.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 <body class="min-h-full bg-sapphire antialiased">
-  <!-- Mobile Menu -->
+  <header>
+    <!-- Mobile Menu -->
 <ul class="mobile-menu fixed top-0 left-0 w-full h-full bg-charcoal text-center z-40 pt-20 hidden flex flex-wrap flex-col text-white transition-opacity duration-300 ease-in-out">
     <li class="p-4 opacity-0 z-50"><a href="/" class="text-lg font-bold text-white backdrop-blur-sm bg-white/50 rounded-full px-4 py-1">Home</a></li>
     <li class="p-4 opacity-0 z-50"><a href="/details/" class="text-lg font-bold ">Details</a></li>
     <li class="p-4 opacity-0 z-50"><a href="https://www.theknot.com/us/shehan-rajapakse-and-susan-fore-nov-2024/rsvp" class="text-lg font-bold" target="_blank">RSVP</a></li>
   </ul>  
-  <header>
+    <nav class="p-5 flex justify-between items-center z-40 w-full absolute">
+    <div class="container mx-auto flex justify-between items-center">
+        <div class="spin-please z-50">
+            <i class="bi bi-suit-heart-fill text-white white-text-shadow text-3xl"></i>
+        </div>
+
+        <!-- Desktop Menu -->
+        <ul class="hidden md:flex md:items-center space-x-4 absolute left-1/2 transform -translate-x-1/2">
+            <li><a href="/" class="text-lg font-bold text-white backdrop-blur-sm bg-white/50 rounded-full px-4 py-1">Home</a></li>
+            <li class="text-white">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"></path>
+            </svg>
+            </li>
+            <li><a href="/details/" class="text-lg font-bold text-white ">Details</a></li>
+            <li class="text-white">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"></path>
+            </svg>
+            </li>
+            <li><a href="https://www.theknot.com/us/shehan-rajapakse-and-susan-fore-nov-2024/rsvp" class="text-lg font-bold text-white" target="_blank" class="text-lg font-bold text-white ">RSVP</a></li>
+        </ul>
+
+        <!-- Animating Hamburger-->
+        <button class="navbar-burger flex items-center text-white p-3 md:hidden z-50">
+            <div class="burger-lines">
+                <span class="block h-1 w-6 bg-current mb-1 transform transition-transform duration-300 ease-in-out"></span>
+                <span class="block h-1 w-6 bg-current mb-1 transform transition-transform duration-300 ease-in-out"></span>
+                <span class="block h-1 w-6 bg-current transform transition-transform duration-300 ease-in-out"></span>
+            </div>
+        </button>
+    </div>
+</nav>
+
   </header>
   <main>
-    <nav class="p-5 flex justify-between items-center z-40 w-full absolute">
-    <div class="spin-please z-50">
-        <i class="bi bi-suit-heart-fill text-white white-text-shadow text-3xl"></i>
-    </div>
-    <button class="navbar-burger flex items-center text-white p-3 md:hidden z-50">
-        <svg class="block h-6 w-6 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <title>Mobile Menu</title>
-            <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
-        </svg>
-    </button>
-    <!-- Desktop Menu -->
-    <ul class="hidden md:flex md:items-center space-x-4 absolute left-1/2 transform -translate-x-1/2">
-        <li><a href="/" class="text-lg font-bold text-white backdrop-blur-sm bg-white/50 rounded-full px-4 py-1">Home</a></li>
-        <li class="text-white">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"></path>
-        </svg>
-        </li>
-        <li><a href="/details/" class="text-lg font-bold text-white ">Details</a></li>
-        <li class="text-white">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" class="w-4 h-4 current-fill" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 5v0m0 7v0m0 7v0m0-13a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z"></path>
-        </svg>
-        </li>
-        <li><a href="https://www.theknot.com/us/shehan-rajapakse-and-susan-fore-nov-2024/rsvp" class="text-lg font-bold" target="_blank" class="text-lg font-bold text-white ">RSVP</a></li>
-    </ul>
-</nav>
-      
-
     <div class="bg-[url('/assets/images/merida!.jpg')] h-screen bg-cover bg-center bg-top mx-auto relative">
   <div class="container h-full mx-auto">
     <div class="row flex h-2/5 md:h-1/2">
