--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <li class="p-4 opacity-0 z-50"><a href="/details/" class="text-lg font-bold ">Details</a></li>
     <li class="p-4 opacity-0 z-50"><a href="https://www.theknot.com/us/shehan-rajapakse-and-susan-fore-nov-2024/rsvp" class="text-lg font-bold" target="_blank">RSVP</a></li>
   </ul>  
-    <nav class="p-5 flex justify-between items-center z-40 w-full absolute">
+    <nav class="p-5 flex justify-between items-center z-40 h-20 w-full absolute">
     <div class="container mx-auto flex justify-between items-center">
         <div class="spin-please z-50">
             <i class="bi bi-suit-heart-fill text-white white-text-shadow text-3xl"></i>
@@ -112,19 +112,17 @@
     <div class="row flex h-16">
       &nbsp;
     </div>
-    <div class="row">
+    <div class="row hidden">
       <a href="#our-story" class="flex flex-col scroll-down-arrow">
         <span class="scroll-down-text self-center text-lg font-bold text-white z-40">Our Story</span>
         <span class="scroll-down-link white-text-shadow bi bi-chevron-down self-center z-40 cursor-pointer text-white text-3xl pt-2"></span>
       </a>        
     </div>
   </div>
+  <!-- Background Gradient -->
+  <div class="absolute bottom-0 left-0 w-full h-24 bg-gradient-to-b from-transparent to-sapphire"></div>
 </div>
-
-<!-- Background Gradient -->
-<div class="absolute bottom-0 left-0 w-full h-24 bg-gradient-to-b from-transparent to-sapphire"></div>
-
-<div class="bg-sapphire w-screen">
+<div class="bg-sapphire w-screen hidden">
   <div class="container mx-auto pt-6">
     <div class="row bg-sapphire pt-10 p-4 text-white" id="our-story">
       <p class="pb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -134,8 +132,21 @@
   </div>
 </div>
   </main>
-  <footer>
+  <footer class="bg-sapphire text-center content-center h-20 w-full p-4 relative">
+  <p class="text-white">
+    A Greenfield Project by
+    <a
+      href="https://github.com/shehanr"
+      class="text-blue-200 hover:underline font-bold"
+      >shehanr</a
+    >.
+    <span class="relative group cursor-pointer">
+      Made with <i class="bi bi-heart-fill text-red-500 px-1"></i> using Jekyll
+      and Tailwind
+    </span>
+  </p>
 </footer>
+
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/assets/js/site.js"></script>
 </body>
